RESOLVED FIXED200573
Can’t sort videos on a YouTube channel page on iPad
https://bugs.webkit.org/show_bug.cgi?id=200573
Summary Can’t sort videos on a YouTube channel page on iPad
Antti Koivisto
Reported 2019-08-09 07:02:40 PDT
Because preventDefault() from touch event handler.
Attachments
patch (2.46 KB, patch)
2019-08-09 07:47 PDT, Antti Koivisto
no flags
patch (2.46 KB, patch)
2019-08-09 07:53 PDT, Antti Koivisto
darin: review+
patch (2.45 KB, patch)
2019-08-10 01:38 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-08-09 07:11:50 PDT
Antti Koivisto
Comment 2 2019-08-09 07:47:09 PDT
EWS Watchlist
Comment 3 2019-08-09 07:50:05 PDT
Attachment 375916 [details] did not pass style-queue: ERROR: Source/WebCore/page/Quirks.cpp:351: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/page/Quirks.cpp:351: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 4 2019-08-09 07:53:10 PDT
Anders Carlsson
Comment 5 2019-08-09 08:47:34 PDT
Comment on attachment 375919 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=375919&action=review > Source/WebCore/ChangeLog:9 > + Add a quick to make touch events non-cancelable (preventDefault() does nothing. Typo, quick.
Darin Adler
Comment 6 2019-08-09 09:27:54 PDT
Comment on attachment 375919 [details] patch I don’t see the code calling the new function.
Geoffrey Garen
Comment 7 2019-08-09 10:08:37 PDT
Comment on attachment 375919 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=375919&action=review r=me >> Source/WebCore/ChangeLog:9 >> + Add a quick to make touch events non-cancelable (preventDefault() does nothing. > > Typo, quick. As long as we're piling on tyops, let's put a ) at the end of the sentence :P.
Geoffrey Garen
Comment 8 2019-08-09 10:09:10 PDT
Comment on attachment 375919 [details] patch Oh yeah, Darin has a point: We should probably call this function.
Antti Koivisto
Comment 9 2019-08-09 11:36:46 PDT
Theres is an internal patch that calls the function.
Antti Koivisto
Comment 10 2019-08-10 01:38:23 PDT
WebKit Commit Bot
Comment 11 2019-08-10 03:38:07 PDT
Comment on attachment 376003 [details] patch Clearing flags on attachment: 376003 Committed r248499: <https://trac.webkit.org/changeset/248499>
WebKit Commit Bot
Comment 12 2019-08-10 03:38:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.