Can’t sort videos on a YouTube channel page on iPad https://bugs.webkit.org/show_bug.cgi?id=200573 <rdar://problem/53415195>

Reviewed by Darin Adler.

Add a quirk to make touch events non-cancelable (preventDefault() does nothing).

* page/Quirks.cpp:
(WebCore::Quirks::shouldMakeTouchEventNonCancelableForTarget const):
* page/Quirks.h:


Canonical link: https://commits.webkit.org/214366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248499 268f45cc-cd09-0410-ab3c-d52691b4dbfc